<resources>
    <string name="app_name">SSSforShop</string>
    <string name="app_long_name">Support Share System for Shop</string>
    <string name="title_bar_edit">店舗情報編集画面</string>
    <string name="title_bar_request">お客様の要望</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="editShopInfo">店舗情報の編集</string>
    <string name="requestButton">お客様のご意見</string>
    <string name="accountName">アカウント名</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="enter_your_name_here">名前を入力</string>
    <string name="enter_your_password_here">パスワードを入力</string>
    <string name="logout">ログアウト</string>
    <string name="create_account">アカウントの新規登録</string>
    <string name="new_registration">新規登録</string>
    <string name="to_login_screen">ログイン画面に戻る</string>
    <string name="debug_login">「panya」アカウントでログイン</string>
    <string name="thisIsDebugButton">デバッグ用ボタン</string>
    <string name="reload_data">読み込み直す</string>
</resources>
