<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_long_name"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/accountName"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/enter_your_name_here"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/enter_your_password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_registration"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <TextView
        android:id="@+id/back_login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/to_login_screen"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>